validating random checks and questions